--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 body{
   margin: 0px;
   font-family: 'Corben';
-  background-image: linear-gradient(to bottom, #D6DBDF, #566573);
+  background-image: linear-gradient(to bottom, #D1F2EB, #17A589);
 }
 
 .topheader{
@@ -40,15 +40,17 @@ body{
 }
 
 .main {
-  padding: 10px;
+  padding-left: 34%;
+  padding-right: 1%;
 }
 
 #bg1 {
-  width: 66%;
+  width: 100%;
   height: 500px;
+  margin-top: 10px;
 }
 
-nav ul{
+ul{
   list-style-type: none;
   color: white;
 }
@@ -66,6 +68,7 @@ nav ul li{
   margin: 10px 10px 10px 10px;
   border: solid 2px black;
   font-size: 16px;
+  display: block;
 }
 
 .contact h2 {
@@ -83,13 +86,16 @@ footer{
 }
 
 a:link {
-  background-color: transparent;
   text-decoration: none;
+}
+
+a:visited {
+  color: blue;
 }
 
 button{
   /* border-left: solid 8px; */
-  /* border-radius: 10px; */
+  border-radius: 10px;
   color: white;
   padding: 10px 10px;
   text-align: center;
@@ -97,8 +103,8 @@ button{
   font-family: 'Corben';
 }
 
-.contact i{
-  font-size: 28px;
+i{
+  font-size: 24px;
 }
 
 button:hover{
@@ -106,8 +112,18 @@ button:hover{
 }
 
 .opciones{
-  background-color: #34495E;
+  background-color: #17A589;
   width: 33%;
+}
+
+.assigments li {
+  font-size: 24px;
+  text-align: center;
+  display: block;
+  width: 100%;
+  background: #17202A;
+  margin-top: 10px;
+  border-radius: 15px;
 }
 
 aside {
