--- a/Practicas/PrConversor/conversor.css
+++ b/Practicas/PrConversor/conversor.css
@@ -19,7 +19,7 @@ body {
   padding: 10px;
   border-radius: 10px;
   border-top: 8px #E74C3C solid;
-  width: 90%;
+  width: 95%;
 }
 
 .conversorContainer {
@@ -28,7 +28,7 @@ body {
 
 .conversor {
   display: inline-block;
-  width: 90%;
+  width: 95%;
   border: solid 2px;
   margin: 0px;
   padding: 20px;
@@ -58,11 +58,19 @@ body {
   font-size: 20px;
   font-weight: bold;
   background-color: rgb(102, 153, 0);
+}
 
+#countriesList li figure p{
+  font-weight: bold;
+  padding: 5px;
+  border-radius: 5px;
+  background-color: rgba(236, 240, 241, 0.8);
 }
 
 .flag:hover {
-  opacity: 0.5;
+  opacity: 0.7;
+  width: 110px;
+  height: 110px;
 }
 
 .fav:hover {
@@ -72,14 +80,13 @@ body {
 
 .form {
   background-color: rgba(0, 0, 102, 0.8);
-  height: 200px;
-  padding-top: 8%;
+  height: 140px;
+  padding-top: 2%;
   color: white;
   border-top: white 12px solid;
 }
 
 .form label {
-  margin-bottom: 15px;
   margin-right: 20px;
   font-size: 24px;
   text-align: center;
@@ -102,7 +109,6 @@ body {
 }
 
 .form input[type=number] {
-  margin-top: 25px;
   width: 200px;
   height: 30px;
   text-align: center;
@@ -118,11 +124,15 @@ body {
 }
 
 .btn {
-  margin-top: 4%;
+  margin-top: 25px;
   padding: 15px;
   width: 200px;
   font-size: 20px;
   border-radius: 5px;
   background-color: rgba(63, 81, 181, 0.8);
   color: white;
+}
+
+.btn:hover {
+  background-color: rgba(0, 0, 102, 0.8);
 }
